# eu5-game-parser

./: .gitignore  README.md  eu5_load_order.toml  pyproject.toml
notebooks/: buildings_goods_flow.ipynb  trade_goods.ipynb
src/eu5gameparser/: __init__.py  cli.py  config.py  load_order.py  scanner.py
src/eu5gameparser/clausewitz/: __init__.py  parser.py  serializer.py  syntax.py  tokenizer.py
src/eu5gameparser/domain/: __init__.py  advancements.py  availability.py  buildings.py  eu5.py  goods.py
src/eu5gameparser/graphs/: __init__.py  goods_flow.py
src/eu5gameparser/savegame/: __init__.py  dashboard.py  dashboard_adapter.py  dashboard_lifecycle.py  dataset.py  exporter.py  extended.py  hierarchy.py  html.py  notebook_analysis.py  notebook_dataset.py  notebook_labels.py  notebook_workbench.py  progression_html.py  references.py
tests/: test_advancements.py  test_availability.py  test_buildings.py  test_clausewitz_parser.py  test_clausewitz_serializer.py  test_cli.py  test_goods.py  test_goods_flow_graph.py  test_integration.py  test_load_order.py  test_savegame_dashboard.py  test_savegame_exporter.py  test_savegame_notebooks.py  test_savegame_progression.py
tests/fixtures/eu5/game/in_game/map_data/: definitions.txt
tests/fixtures/eu5_mod/in_game/common/advances/: mod_advances.txt
tests/fixtures/eu5_mod/in_game/common/building_categories/: 00_default.txt
tests/fixtures/eu5_mod/in_game/common/building_types/: mod_buildings.txt
tests/fixtures/eu5_mod/in_game/common/goods/: mod_goods.txt
tests/fixtures/eu5_mod/in_game/common/production_methods/: mod_methods.txt
tests/fixtures/savegames/: minimal_text_save.eu5
(+3 files in other folders)
